Remove deprecated "new URL"